--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     />
   </head>
   <body>
-    <h1>Pratica con il Grid System!</h1>
+    <header>
+      <h1>Pratica con il Grid System!</h1>
+    </header>
+    <main>
+      <h1>ESERCIZO 1</h1>
+      <div class="container"></div>
+      <div class="row"></div>
+      <div class="row"></div>
+      <div class="row"></div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
