--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,16 +11,33 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="h-100">
     <header>
       <h1>Pratica con il Grid System!</h1>
     </header>
-    <main>
+    <main class="h-100">
       <h1>ESERCIZO 1</h1>
+      <div class="container h-100">
+        <div class="row h-25">
+          <div
+            class="col bg-primary bg-mg-primary text-light m-3 p-3 border border-2 border-dark"
+          >
+            COLONNA 1
+          </div>
+          <div
+            class="col bg-primary bg-mg-primary text-light m-3 p-3 border border-2 border-dark"
+          >
+            COLONNA 2
+          </div>
+          <div
+            class="col bg-primary bg-mg-primary text-light m-3 p-3 border border-2 border-dark"
+          >
+            COLONNA 3
+          </div>
+        </div>
+      </div>
+      <!--ESERCIZIO 2-->
       <div class="container"></div>
-      <div class="row"></div>
-      <div class="row"></div>
-      <div class="row"></div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
