--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <h1>Pratica con il Grid System!</h1>
     </header>
     <main class="h-100">
-      <h1>ESERCIZO 1</h1>
-      <div class="container h-100">
-        <div class="row h-25">
+      <h2>ESERCIZO 1</h2>
+      <div class="container h-30">
+        <div class="row h-30">
           <div
             class="col bg-primary bg-mg-primary text-light m-3 p-3 border border-2 border-dark"
           >
@@ -37,7 +37,26 @@
         </div>
       </div>
       <!--ESERCIZIO 2-->
-      <div class="container"></div>
+      <h2>ESERCIZO 2</h2>
+      <div class="container h-30">
+        <div class="row h-30">
+          <div
+            class="col text-bg-warning bg-mg-primary col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark"
+          >
+            COLONNA 1
+          </div>
+          <div
+            class="col text-bg-warning bg-mg-primary col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark"
+          >
+            COLONNA 2
+          </div>
+          <div
+            class="col text-bg-warning bg-mg-primary col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark"
+          >
+            COLONNA 3
+          </div>
+        </div>
+      </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
