--- a/index.html
+++ b/index.html
@@ -57,6 +57,75 @@
           </div>
         </div>
       </div>
+      <!--ESERCIZIO 3-->
+      <h2>ESERCIZO 3</h2>
+      <div class="container h-30">
+        <div class="row h-30">
+          <div
+            class="col text-light bg-success col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark"
+          >
+            COLONNA 1
+          </div>
+          <div
+            class="col bg-success text-light col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark"
+          >
+            COLONNA 2
+          </div>
+          <div
+            class="col bg-success text-light col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark"
+          >
+            COLONNA 3
+          </div>
+        </div>
+      </div>
+      <!--ESERCIZIO 4-->
+      <h2>ESERCIZO 4</h2>
+      <div class="container h-30">
+        <div class="row h-30">
+          <div
+            class="col text-light bg-danger col-lg-5 col-xl-5 col-xxl-5 p-3 border border-2 border-dark"
+          >
+            COLONNA 1
+          </div>
+          <div
+            class="col bg-danger text-light col-lg-2 col-xl-2 col-xxl-2 p-3 border border-2 border-dark"
+          >
+            COLONNA 2
+          </div>
+          <div
+            class="col text-light bg-danger col-lg-5 col-xl-5 col-xxl-5 p-3 border border-2 border-dark"
+          >
+            COLONNA 3
+          </div>
+        </div>
+      </div>
+      <!--ESERCIZIO 5-->
+      <h2>ESERCIZO 5</h2>
+      <div class="container h-30">
+        <div class="row h-30">
+          <div
+            class="col text-light bg-primary col-sm-9 col-md-9 col-lg-8 col-xl-8 col-xxl-8 p-3 border border-2 border-dark"
+          >
+            <div class="row">
+              <div
+                class="col col-sm-12 col-md-12 col-lg-6 bg-secondary p-3 border border-1 border-dark"
+              >
+                COLONNA1.1
+              </div>
+              <div
+                class="col col-sm-12 col-md-12 col-lg-6 bg-secondary p-3 border border-1 border-dark"
+              >
+                COLONNA2.1
+              </div>
+            </div>
+          </div>
+          <div
+            class="col bg-primary text-light col-sm-5 col-md-5 col-lg-4 col-xl-4 col-xxl-4 p-3 border border-2 border-dark"
+          >
+            COLONNA 2
+          </div>
+        </div>
+      </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
