--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   </head>
   <body class="h-100">
     <header>
-      <h1>Pratica con il Grid System!</h1>
+      <h1 class="d-flex justify-content-center">Pratica con il Grid System!</h1>
     </header>
     <main class="h-100">
-      <h2>ESERCIZO 1</h2>
+      <h2 class="d-flex justify-content-center">ESERCIZO 1</h2>
       <div class="container h-30">
         <div class="row h-30">
           <div
@@ -37,7 +37,7 @@
         </div>
       </div>
       <!--ESERCIZIO 2-->
-      <h2>ESERCIZO 2</h2>
+      <h2 class="d-flex justify-content-center">ESERCIZO 2</h2>
       <div class="container h-30">
         <div class="row h-30">
           <div
@@ -58,7 +58,7 @@
         </div>
       </div>
       <!--ESERCIZIO 3-->
-      <h2>ESERCIZO 3</h2>
+      <h2 class="d-flex justify-content-center">ESERCIZO 3</h2>
       <div class="container h-30">
         <div class="row h-30">
           <div
@@ -79,7 +79,7 @@
         </div>
       </div>
       <!--ESERCIZIO 4-->
-      <h2>ESERCIZO 4</h2>
+      <h2 class="d-flex justify-content-center">ESERCIZO 4</h2>
       <div class="container h-30">
         <div class="row h-30">
           <div
@@ -100,7 +100,7 @@
         </div>
       </div>
       <!--ESERCIZIO 5-->
-      <h2>ESERCIZO 5</h2>
+      <h2 class="d-flex justify-content-center">ESERCIZO 5</h2>
       <div class="container h-30">
         <div class="row h-30">
           <div
