--- a/index.html
+++ b/index.html
@@ -126,6 +126,22 @@
           </div>
         </div>
       </div>
+      <!--ESERCIZIO 6-->
+      <h2 class="d-flex justify-content-center">ESERCIZO 3</h2>
+      <div class="container h-30">
+        <div class="row h-30">
+          <div
+            class="col text-light bg-dark col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark"
+          >
+            COLONNA 1
+          </div>
+          <div
+            class="col bg-dark text-light col-sm-12 col-md-12 p-3 col-lg-4 border border-2 border-dark offset-xxl-4"
+          >
+            COLONNA 2
+          </div>
+        </div>
+      </div>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
