--- a/index.html
+++ b/index.html
@@ -104,23 +104,23 @@
       <div class="container h-30">
         <div class="row h-30">
           <div
-            class="col text-light bg-primary col-sm-9 col-md-9 col-lg-8 col-xl-8 col-xxl-8 p-3 border border-2 border-dark"
+            class="col text-light bg-primary col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-8 p-3 border border-2 border-dark"
           >
             <div class="row">
               <div
-                class="col col-sm-12 col-md-12 col-lg-6 bg-secondary p-3 border border-1 border-dark"
+                class="col col-sm-12 col-md-12 col-lg-12 bg-secondary p-3 border border-1 border-dark"
               >
                 COLONNA1.1
               </div>
               <div
-                class="col col-sm-12 col-md-12 col-lg-6 bg-secondary p-3 border border-1 border-dark"
+                class="col col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-8 bg-secondary p-3 border border-1 border-dark"
               >
                 COLONNA2.1
               </div>
             </div>
           </div>
           <div
-            class="col bg-primary text-light col-sm-5 col-md-5 col-lg-4 col-xl-4 col-xxl-4 p-3 border border-2 border-dark"
+            class="col bg-primary text-light col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 p-3 border border-2 border-dark"
           >
             COLONNA 2
           </div>
